somewhat completed the education level screen

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   cupertino_icons: ^1.0.2
+  dropdown_search: ^5.0.6
   flutter:
     sdk: flutter
   flutter_chip_tags: ^2.0.2
