--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,9 +36,34 @@ dependencies:
     sdk: flutter
   flutter_chip_tags: ^2.0.2
   font_awesome_flutter: ^10.4.0
+  google_fonts: ^4.0.4
   image: ^4.0.15
-  image_picker: ^0.8.6+2
+  flutter_google_places: ^0.3.0
+  flutter_google_places_sdk: ^0.3.2+9
+  image_picker: ^1.0.1
+  location: ^5.0.0
+  lottie: ^2.3.2
+  otp_text_field: ^1.1.3
+  pinput: ^3.0.0
   path_provider: ^2.0.12
+  fcm_config: ^3.1.2
+  ficonsax: ^0.0.3
+  firebase_analytics: ^10.0.7
+  firebase_app_check: ^0.1.4
+  firebase_auth: ^4.0.2
+  firebase_core: ^2.1.0
+  accordion: ^2.5.1
+  badges: ^3.1.1
+  bottom_sheet: ^3.1.2
+  calendar_date_picker2: ^0.5.2
+  carousel_slider: ^4.2.1
+  cloud_firestore: ^4.0.2
+  firebase_core_platform_interface: 4.8.0
+  firebase_messaging: ^14.2.1
+  firebase_storage: ^11.0.2
+  provider: ^6.0.5
+  share_plus: ^7.0.2
+  shared_preferences: ^2.1.1
   permission_handler: ^10.2.0
 
 dev_dependencies:
