--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,10 +36,11 @@ dependencies:
   carousel_slider: ^4.2.1
   cloud_firestore: ^4.0.2
   cupertino_icons: ^1.0.2
+  date_time_format: ^2.0.1
   dropdown_search: ^5.0.6
   fcm_config: ^3.1.2
   ficonsax: ^0.0.3
-  file_picker: ^4.5.0
+  file_picker: ^3.0.4
   firebase_analytics: ^10.0.7
   firebase_app_check: ^0.1.4
   firebase_auth: ^4.0.2
@@ -51,14 +52,14 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_chip_tags: ^2.0.2
-  flutter_webrtc: ^0.9.34
+  flutter_rating_bar: ^4.0.1
   font_awesome_flutter: ^10.4.0
   google_fonts: ^4.0.4
   google_sign_in: ^5.4.2
-  http: ^0.13.3
   http_parser: ^4.0.0
   image: ^4.0.15
   image_picker: ^1.0.1
+  jitsi_meet_wrapper: ^0.2.0+1
   lottie: ^2.3.2
   otp_text_field: ^1.1.3
   path_provider: ^2.0.4
@@ -66,8 +67,7 @@ dependencies:
   pinput: ^3.0.0
   provider: ^6.0.5
   shared_preferences: ^2.1.1
-  socket_io_client: ^2.0.3+1
-  syncfusion_flutter_pdfviewer: ^20.4.38
+  url_launcher: ^6.2.1
 
 dev_dependencies:
   flutter_lints: ^2.0.0
